--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
     <link rel="stylesheet" href="%PUBLIC_URL%/libs/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/custom.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/libs/font-awesome/css/font-awesome.min.css">
 
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
